Fixed sprite alignment and input text spacing.

--- a/jujugui/static/gui/src/app/assets/css/machine-view/_machine-view-panel.scss
+++ b/jujugui/static/gui/src/app/assets/css/machine-view/_machine-view-panel.scss
@@ -59,7 +59,7 @@
                     .svg-icon {
                         display: inline-block;
                         margin-right: 7px;
-                        vertical-align: middle;
+                        vertical-align: text-bottom;
                     }
                 }
 
