--- a/jujugui/static/gui/src/app/assets/css/machine-view/_service-scale-up-view.scss
+++ b/jujugui/static/gui/src/app/assets/css/machine-view/_service-scale-up-view.scss
@@ -71,7 +71,7 @@
             .service-units {
                 display: inline-block;
                 float: right;
-                width: 30px;
+                width: 35px;
                 margin: 0;
                 padding-top: 4px;
                 padding-bottom: 4px;
